# nlc-forms

./: .env.example  Makefile  README.md  backup.sh  compose.yml  diagrama.puml  restore.sh  serve.py  setup-producao.sh  vercel.json
backend/: Dockerfile  main.py  pdf_relatorio.py  pyproject.toml  seed_dados.py
backend/app/: __init__.py  auth.py  config.py  database.py  models.py  notify.py  ratelimit.py
backend/app/routers/: admin.py  consulta.py  token.py  triagem.py
backend/tests/: test_routes.py
backups/: forms_2026-06-21_091753.db  forms_2026-06-21_091753.json
docs/: arquitetura.puml
frontend/: admin-gerar-token.html  painel-atendimento.html  triagem-desenvolvimento.html  triagem-seguranca.html  triagem-suporte.html
frontend/admin/: admin-gerar-token.html  admin-lista-clientes.html  config.js  index.html  painel-atendimento.html
frontend/public/: config.js  index.html  triagem-desenvolvimento.html  triagem-seguranca.html  triagem-suporte.html
