[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "pydantic>=2.13.4",
    "reportlab>=5.0.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "DB_PATH=/tmp/nlc-test.db",
    "ADMIN_KEY=test-admin-key",
    "SMTP_HOST=",
]
